# SmartPark

./: .env  .env.example  .gitignore  README.md  backend_init.bat  db.py  del_venv.bat  frontend_init.bat  main.py  pyproject.toml  requirements.txt  run.bat  seed.py  venv.init.bat
SQL/: sql_schema.sql
Turan Alizada 684.23e MIDTERM/: 3rd Question.py  4th Question.py  5th Question.py  Python.docx
docs/: admin_workflow_guide.md  api_endpoints.md  architecture.md  audit.md  button_action_matrix.md  database_design.md  database_schema.sql  demo_script.md  design_system.md  drawio_guidance.md  erd.mmd  final_hardening_audit.md  future_improvements.md  known_limitations.md  presentation_outline.md  product_rebuild_audit.md  research_references.md  run_guide.md  schema.dbml  screenshot_guide.md  setup_guide.md  speaker_notes.md  test_plan.md  test_report.md  user_manual.md
drafts/: early-demo.rar
lib/: lib9.py
routing/: home.py  main.py
src/smartpark/: admin.py  api_client.py  api_routes.py  backend_app.py  db.py  dialog.py  frontend_app.py  lib.py  login.py  main.py  schemas.py  security.py  signup.py
src/smartpark/api/: auth.py  dashboard.py  deps.py  lots.py  optimizer.py  payments.py  reports.py  sensors.py  sessions.py  slots.py  tariffs.py  vehicles.py  zones.py
src/smartpark/frontend/: api_client.py  app.py  design.py  state.py
src/smartpark/services/: payment_service.py  session_service.py  slot_optimizer.py  tariff_service.py
tests/: conftest.py  test_api.py  test_slot_optimizer.py  test_tariff_service.py  test_visible_action_workflows.py
