[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartpark"
version = "1.0.0"
description = "SmartPark Flet + FastAPI application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "flet>=0.24",
    "httpx>=0.27",
    "uvicorn[standard]>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
